hphp/test/slow/traits/requireclass/requirethis_notsubtype_02.bad.php.expectf
Fatal error: Class 'D' required to be a subclass of class 'C' by trait '%s' in %s/requireclass/requirethis_notsubtype_02.bad.php on line 13
